--- a/_config.yml
+++ b/_config.yml
@@ -33,11 +33,7 @@ header:
       style: link
 footer:
   content: >-
-    &copy; Stackbit. All rights reserved. This Jamstack site was created with <a
-    href="https://www.stackbit.com/?utm_source=deployed-footer" target="_blank"
-    rel="noopener">Stackbit</a>. Create yours <a
-    href="https://app.stackbit.com/create?theme=exto&utm_source=deployed-footer"
-    target="_blank" rel="noopener">now</a>
+    &copy; nurmaali. All rights reserved.
   has_social: true
   social_links:
     - label: Twitter
