remove unused links

--- a/_config.yml
+++ b/_config.yml
@@ -19,17 +19,14 @@ header:
     - label: Blog
       url: /blog/
       style: link
-    - label: Style Guide
-      url: /style-guide/
-      style: link
+#    - label: Style Guide
+#      url: /style-guide/
+#      style: link
     - label: About
       url: /about/
       style: link
     - label: Contact
       url: /contact/
-      style: link
-    - label: Text
-      url: /text/
       style: link
 footer:
   content: >-
