add another base url comment to help

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 title: nurmaali
 baseurl: /
 #baseurl: /B202/nurmaali/_site
+#baseurl: /B202/nurmaali-sem/
 permalink: '/:title/'
 collections:
   posts:
