--- a/_config.yml
+++ b/_config.yml
@@ -18,8 +18,8 @@ header:
     - label: About
       url: /about/
       style: link
-    - label: Portfolio
-      url: /portfolio/
+    - label: Projects
+      url: /projects/
       style: link
     - label: Blog
       url: /blog/
